--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "react-scripts test"
   },
   "dependencies": {
+    "bulma": "^0.9.3",
     "react": "~17.0.0",
     "react-dom": "~17.0.0",
     "react-redux": "~7.2.0",
